[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.2.1"
atoi = "2"
chrono = "0.4.23"
regex = "1"
num = "0.4.0"
eval = "0.4"
itertools = "0.10.5"
pathfinding = "4.1.1"
lazy_static = "1.4.0"
